# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "curity_phantom_token"
version = "1.0.0"
rust-version = "1.74.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "your-group-id"
definition_asset_id = "curity-phantom-token"
implementation_asset_id = "curity-phantom-token-flex"

[dependencies]
pdk = { version = "1.2.0", registry = "anypoint" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_urlencoded = "0.7.0"
anyhow = "1.0"
base64 = "0.21.0"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.11.27", features = ["json"] }


[dev-dependencies]
pdk-test = { version = "1.2.0", registry = "anypoint" }
httpmock = "0.6"


[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
